--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
     align-items: center;
     cursor: pointer;
     border-radius: 10px;
+    margin-bottom: 0px;
 }
 .logo img {
     z-index: 100;
