--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 10;
 }
 .navbar {
     display: flex;
@@ -27,6 +26,13 @@ body {
     padding: 20px 200px;
     align-items: center;
     width: 100%;
+}
+b {
+    color: red;
+    font-size: 60px;
+    opacity: 0.9;
+    font-weight: bolder;
+    margin-right: -15px;
 }
 .sign a{
     z-index: 100;
@@ -45,6 +51,12 @@ body {
     cursor: pointer;
     border-radius: 10px;
     margin-bottom: 10px;
+}
+.logo {
+    display: flex;
+    align-items: center;
+    opacity: none;
+    gap: -10px;
 }
 .logo img {
     z-index: 100;
@@ -250,6 +262,9 @@ div .list {
     .navbar {
         padding: 10px 20px;
     }
+    b {
+        font-size: 60px;
+    }
     .body2 {
         flex-direction: column;
     }
@@ -268,7 +283,12 @@ div .list {
     .navbar {
         padding: 5px 10px;
     }
-
+    .logo {
+        gap: 10px;
+    }
+    b {
+        font-size: 30px;
+    }
     .logo img {
         width: 100px;
     }
