--- a/style.css
+++ b/style.css
@@ -169,12 +169,21 @@ p {
 .sam  {
     color: blue;
 }
+.daniel {
+    display: none;
+    background-color:rgb(68, 68, 68) ;
+    padding: 20px 0px;
+}
+.daniel p {
+    margin-bottom: 20px;
+    font-weight: bold;
+}
 .body4 {
     display: flex;
     width: 100%;
     flex-direction: column;
+    padding: 0px 200px;
     justify-content: center;
-    align-items: center;
     margin-top: 70px;
     border-bottom: 4px solid rgb(66, 66, 66);
     padding-bottom: 100px;
@@ -182,15 +191,22 @@ p {
 .body4 h1 {
     margin-bottom: 50px;
 }
+form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .button button {
     display: flex;
     justify-content: center;
     align-items: center;
     justify-content: space-between;
     background-color:rgb(45,45,45) ;
-    gap: 800px;
+    gap: 500px;
     padding: 20px;
     cursor: pointer;
+    transition: 0.5s;
+    height: 100px;
     width: 100%;
     border: 2px solid black;
 }
@@ -199,10 +215,9 @@ p {
 }
 .button button:hover {
     background-color:rgb(78,78,78) ;
+    transition: 0.5s;
 }
-.button button:focus {
-    background-color:rgb(78,78,78) ;
-}
+
 .footer {
     display: flex;
     flex-direction: column;
@@ -258,7 +273,7 @@ div .list {
     margin-bottom: 20px;
     cursor: pointer;
 }
-@media screen and (max-width:1000px) {
+@media screen and (max-width:1300px) {
     .navbar {
         padding: 10px 20px;
     }
@@ -273,6 +288,8 @@ div .list {
     }
     .body4 {
         flex-direction: column;
+    padding: 0px 50px;
+
     }
     .button button {
         gap: 400px;
@@ -298,13 +315,16 @@ div .list {
         align-items: center;
     }
     input {
-        width: 350px;
+        width: 250px;
     }
     .body2 img{
         width: 100%;
     }
     .body3 img{
         width: 100%;
+    }
+    .body4 {
+        padding: 0px 20px;
     }
     .body4 img{
         width: 100%;
